<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginTop="5dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="#2196F3"
    app:cardCornerRadius="25dp"
    app:cardElevation="7dp"
    tools:layout_editor_absoluteX="10dp"
    tools:layout_editor_absoluteY="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvMes"
                    android:layout_width="69dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/mes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvDia"
                    android:layout_width="67dp"
                    android:layout_height="37dp"
                    android:layout_marginTop="12dp"
                    android:paddingTop="0dp"
                    android:text="@string/d"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tvMes"
                    app:layout_constraintTop_toTopOf="@+id/tvMes" />

                <TextView
                    android:id="@+id/tvAno"
                    android:layout_width="62dp"
                    android:layout_height="21dp"
                    android:layout_marginTop="33dp"
                    android:text="@string/a_o"
                    app:layout_constraintEnd_toEndOf="@+id/tvDia"
                    app:layout_constraintStart_toStartOf="@+id/tvDia"
                    app:layout_constraintTop_toTopOf="@+id/tvDia" />

                <TextView
                    android:id="@+id/tvTipo"
                    android:layout_width="88dp"
                    android:layout_height="23dp"
                    android:layout_marginStart="32dp"
                    android:text="@string/tipo"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/tvMes"
                    app:layout_constraintTop_toTopOf="@+id/tvMes" />

                <TextView
                    android:id="@+id/tvSexo"
                    android:layout_width="86dp"
                    android:layout_height="23dp"
                    android:text="@string/sexo"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="@+id/tvTipo"
                    app:layout_constraintStart_toStartOf="@+id/tvTipo"
                    app:layout_constraintTop_toBottomOf="@+id/tvTipo" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="39dp"
                    android:layout_height="23dp"
                    android:layout_marginStart="50dp"
                    android:text="@string/imc"
                    app:layout_constraintStart_toEndOf="@+id/tvTipo"
                    app:layout_constraintTop_toTopOf="@+id/tvTipo" />

                <TextView
                    android:id="@+id/tvIMC"
                    android:layout_width="115dp"
                    android:layout_height="51dp"
                    android:layout_marginTop="13dp"
                    android:text="@string/imc_mostar"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView10"
                    app:layout_constraintTop_toTopOf="@+id/textView10" />

                <TextView
                    android:id="@+id/tvPeso"
                    android:layout_width="89dp"
                    android:layout_height="22dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/peso"
                    app:layout_constraintEnd_toEndOf="@+id/tvSexo"
                    app:layout_constraintStart_toStartOf="@+id/tvSexo"
                    app:layout_constraintTop_toBottomOf="@+id/tvTipo" />

                <TextView
                    android:id="@+id/tvAltura"
                    android:layout_width="66dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="40dp"
                    android:text="Altura"
                    app:layout_constraintStart_toStartOf="@+id/tvPeso"
                    app:layout_constraintTop_toTopOf="@+id/tvPeso" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>